# sacreCOMET

./: .gitignore  LICENSE  README.md
experiments/: hparams.yaml
experiments/domainyear_bias/: 01a-tag_domain.py  01b-tag_year.py  02-train.sh
experiments/misc/: get_data.sh
experiments/paper_reporting/: 01-get_citing_papers.py  03-parse_pdf.py
experiments/precision/: compute_qCOMET.py  run_modelpredict_gpu.sh
experiments/score_bias/: 03-train_zori.sh
experiments/scripts/: 01a-download_raw_data.sh  02-jsonl_to_csv.py  03-score_comet.py  99-get_unbabel_papers.py  utils.sh
experiments/translationese_in_hypothesis/: evaluate.sh  gpt_paraphrase.py
patrick/: evaluate_py.3.12.4.sh  get_data.sh
patrick/empty_hypothesis/: evaluate_empty_and_random.sh
patrick/language_mismatch/: evaluate_language_mismatch.sh
patrick/software_versions/: evaluate_py.3.12.4.sh
patrick/translationese_in_hypothesis/: get_paraphrase.sh
python-tool/: README.md  pyproject.toml  sacrecomet.py
tszkin/scripts/: compute_metric_corr.py  generate_tsv.py  run_comet-score.sh  run_modelpredict_cpu.sh
vilem/: .gitignore
vilem/bias/: 01-prepare_bias.py  02-train_base.sh  02a-fig_language_scores_synth.py  02b-fig_language_scores_real.py  02c-tab_language_scores_average.py  03-fig_language_scores.py  03-train_base.sh  04-eval_zori.sh  figutils.py
vilem/configs/: early_stopping.yaml  model.yaml  model_checkpoint.yaml  trainer.yaml
vilem/domain_bias/: 01a-explore_domain.py  01b-explore_year.py
vilem/domainyear_bias/: 01a-tag_domain.py  01b-tag_year.py  03-eval.sh  04-collect_score.py
(+39 files in other folders)
